--- a/index.html
+++ b/index.html
@@ -10,6 +10,54 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css" />
 </head>
 <body>
+    <header class="header">
+        <nav class="nav">
+            <a href="#" class="nav_logo">MyLAB</a>
     
+            <ul class="nav_items">
+                <li class="nav_item">
+                    <a href="#" class="nav_link">Home</a>
+                    <a href="#" class="nav_link">Product</a>
+                    <a href="#" class="nav_link">Services</a>
+                    <a href="#" class="nav_link">Contact</a>   
+                </li>
+            </ul>
+            <button class="button">Login</button>
+        </nav>
+    </header>
+
+    <!--Home-->
+    <section class="home">
+        <div class="form_container">
+            <i class="uil uil-times form_container" >
+            <!-- Login form-->
+            <div class="form login_form">
+                <form action="#">
+                    <h2>Login</h2>
+
+                    <div class="input_box">
+                        <input type="email" placeholder="Enter your email" required />
+                        <i class="uil uil-envelope-alt email"></i>
+                    </div>
+
+                    <div class="input_box">
+                        <input type="Password" placeholder="Enter your password" required/>
+                        <i class="uil uil-lock password"></i>
+                        <i class="uil uil-eye-slash pw_hide"></i>
+                    </div>
+
+                    <div class="option_field">
+                        <span class="checkbox">
+                            <input type="checkbox" id="check">
+                            <label for="check">Remember me</label>
+                        </span>
+                        <a href="#" class="forgot_password">Forgot password?</a>
+                    </div>
+
+                </form>
+            </div>
+            </i>
+        </div>
+    </section>
 </body>
 </html>
