--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                         <a href="#" class="forgot_password">Forgot password?</a>
                     </div>
 
+                    <button class="button">Login Now</button>
+                    
                 </form>
             </div>
             </i>
