--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
                     <a href="#" class="nav_link">Contact</a>   
                 </li>
             </ul>
-            <button class="button">Login</button>
+            <button class="button" id="form-open">Login</button>
         </nav>
     </header>
 
     <!--Home-->
     <section class="home">
         <div class="form_container">
-            <i class="uil uil-times form_container" >
+            <i class="uil uil-times form_close" ></i>
             <!-- Login form-->
             <div class="form login_form">
                 <form action="#">
@@ -56,10 +56,44 @@
 
                     <button class="button">Login Now</button>
                     
+                    <div class="login_signup">
+                        Don't have an account? <a href="#" class="signup">Signup</a>
+                    </div>
                 </form>
             </div>
-            </i>
+
+            <!--SignUp form --->
+            <div class="form signup_form">
+                <form action="#">
+                    <h2>Signup</h2>
+
+                    <div class="input_box">
+                        <input type="email" placeholder="Enter your email" required />
+                        <i class="uil uil-envelope-alt email"></i>
+                    </div>
+
+                    <div class="input_box">
+                        <input type="Password" placeholder="Create password" required/>
+                        <i class="uil uil-lock password"></i>
+                        <i class="uil uil-eye-slash pw_hide"></i>
+                    </div>
+
+                    <div class="input_box">
+                        <input type="Password" placeholder="Confirm password" required/>
+                        <i class="uil uil-lock password"></i>
+                        <i class="uil uil-eye-slash pw_hide"></i>
+                    </div>
+
+                    <button class="button">Signup Now</button>
+                    
+                    <div class="login_signup">
+                        Already have an account? <a href="#" class="login">Login</a>
+                    </div>
+                </form>
+            </div>
         </div>
     </section>
+
+    <script src="script.js"></script>
 </body>
 </html>
