--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
                             <input type="checkbox" id="check">
                             <label for="check">Remember me</label>
                         </span>
-                        <a href="#" class="forgot_password">Forgot password?</a>
+                        <a href="#" class="forgot_pw">Forgot password?</a>
                     </div>
 
                     <button class="button">Login Now</button>
                     
                     <div class="login_signup">
-                        Don't have an account? <a href="#" class="signup">Signup</a>
+                        Don't have an account? <a href="#" id="signup">Signup</a>
                     </div>
                 </form>
             </div>
@@ -87,7 +87,7 @@
                     <button class="button">Signup Now</button>
                     
                     <div class="login_signup">
-                        Already have an account? <a href="#" class="login">Login</a>
+                        Already have an account? <a href="#" id="login">Login</a>
                     </div>
                 </form>
             </div>
